dodano kolumnę cena to zaopatrzenia, zmodyfikowano zamówienia, dodano endpointy do zwracania najbliższej apteki oraz najbliższej apteki posiadającej konkretny lek
